--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.18",
-    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.24",
     "expo": "~50.0.11",
+    "expo-font": "^11.10.3",
+    "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-maps": "^1.11.3",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
